--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,14 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - TZ=Europe/Ljubljana
+      - TZ=Europe/Ljubljana      
       - CLEAR_CONTAINERS=false
       - CLEAR_IMAGES=true
       - CLEAR_VOLUMES=true
       - CLEAR_NETWORKS=true
+      - CLEAR_LOGS=false
+      - CLEAR_CACHE=true
+
     restart: always
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
